# kyros

./: .env.example  .gitignore  .kyros_state.json  AGENTS.md  CLAUDE.md  main.py  pyproject.toml
artifacts/: backtest_report_pre_phase2b_20260630_222324.md  blueprint_phase2b_dol_20260630_100327.md  blueprint_phase3b_20260629_233704.md  calibration_report_pre_phase2b_20260630_222324.json  contract_20260630_181142_d9a94d.md  contract_20260630_214051.md  contract_20260630_214732_011092.md  contract_phase2b_dol_20260630_100327.md  contract_phase3b_20260629_233704.md  prompts_phase2.yaml  review_20260630_181755_da08c7.md  review_20260630_215108_5a8b71.md  review_phase2b_dol_20260630_100327.md
artifacts/phase-1/: contract.md  main.py
artifacts/phase-2/: blueprint.md  contract.md  main.py  review.md
artifacts/phase-3a/: blueprint.md  contract_20260627_085806_f8d6d6.md  review.md  (+2 more)
config/: prompts.yaml
scripts/: build_golden_dataset.py  download_nq_ib_insync.py  process_knowledge_base.py  run_backtest.py  run_tuning.py
tests/: _fixtures.py  conftest.py  test_agent_loader.py  test_candles.py  test_displacement.py  test_executor_tools.py  test_fair_value_gaps.py  test_fibonacci.py  test_inducement.py  test_liquidity.py  test_market_structure.py  test_model_router.py  test_orchestrator.py  test_order_blocks.py  test_power_of_three.py  test_premium_discount.py  test_sessions.py  test_volume_imbalance.py
workspace/: .kyros_state_update.json  _probe2.txt  backtest_report.md  blueprint.md  calibration_report.json  contract.md  problem.md  review.md  walkforward_report.md
(+79 files in other folders)
