[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kyros"
version = "0.1.0"
description = "Agent orchestration framework for quantitative trading research"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
