[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kyros"
version = "0.1.0"
description = "Agent orchestration framework for quantitative trading research"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.112.0",
    "bs4>=0.0.2",
    "litellm>=1.89.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "langfuse>=2.0,<3",
    "tenacity>=9.1.4",
    "tqdm>=4.66",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
